--- a/dev.html
+++ b/dev.html
@@ -1,4 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width">
+
+	<link rel="shortcut icon" href="./static/favicon.ico"> 
+	<link rel="stylesheet" href="./static/css/style.css">
+
+	
+	<title>Welcome</title>
+	
+
+</head>
+<body>
 <html lang="en-US">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,7 +37,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span6">
-                        <h1><a class="brand" href="/">GeoNode</a></h1>
+                        <h1><a class="brand" href="#">GeoNode</a></h1>
                     </div>
                     <div class="span6">
                         <div>
@@ -33,6 +48,7 @@
                 </div>
             </div>
         </header>
+	
         <section class="body">
     <div id="container">
       <p>
@@ -102,9 +118,14 @@
       </p>
     </div>
     </section>
-        <footer class="footer">
-            <div class="container">
-                <section class="important-links">
+
+
+	
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script src="./static/js/main.js"></script>
+	
+	
+	
                 <section class="btm">
                     <div class="row">
                         <div class="span6">
@@ -121,6 +142,10 @@
                 </section>
             </div>
         </footer>
+		
 <a href="https://github.com/GeoNode/geonode/tree/dev"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
     </body>
+</html>
+
+</body>
 </html>
