--- a/feature_detail.html
+++ b/feature_detail.html
@@ -1,4 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width">
+
+	<link rel="shortcut icon" href="./static/favicon.ico"> 
+	<link rel="stylesheet" href="./static/css/style.css">
+
+	
+	<title>Welcome</title>
+	
+
+</head>
+<body>
 <html lang="en-US">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +22,7 @@
         <link rel="shortcut icon" href="static/img/favicon.ico" />
         <meta name='description' content='GeoNode'/>
         <meta name='keywords' content='GeoNode'/>
-        <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
         <link rel='stylesheet' href='static/css/site.css' type='text/css' media='all' />
         <!-- HTML5 shim, for IE6-8 support of HTML elements -->
         <!--[if lt IE 9]>
@@ -17,7 +32,7 @@
         <script type="text/javascript" src="static/js/jquery.js"></script>
         <script type="text/javascript" src="static/js/sequence.jquery-min.js"></script>
     </head>
-    <body class="geonode-features">
+    <body>
         <header class="main">
             <div class="container">
                 <div class="row">
@@ -33,6 +48,7 @@
                 </div>
             </div>
         </header>
+	
         <section class="body">
             <div class="container">
                 <div class="row">
@@ -105,8 +121,14 @@
                 </div>
             </div>
         </section>
-        <footer class="footer">
-            <div class="container">
+
+
+	
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script src="./static/js/main.js"></script>
+	
+	
+	
                 <section class="btm">
                     <div class="row">
                         <div class="span6">
@@ -123,6 +145,10 @@
                 </section>
             </div>
         </footer>
+		
 <a href="https://github.com/GeoNode/geonode/tree/dev"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
     </body>
+</html>
+
+</body>
 </html>
