--- a/dev.html
+++ b/dev.html
@@ -1,19 +1,4 @@
 <!doctype html>
-
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width">
-
-	<link rel="shortcut icon" href="./static/favicon.ico"> 
-	<link rel="stylesheet" href="./static/css/style.css">
-
-	
-	<title>Welcome</title>
-	
-
-</head>
-<body>
 <html lang="en-US">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -33,6 +18,7 @@
         <script type="text/javascript" src="static/js/sequence.jquery-min.js"></script>
     </head>
     <body>
+		
         <header class="main">
             <div class="container">
                 <div class="row">
@@ -48,6 +34,8 @@
                 </div>
             </div>
         </header>
+		
+
 	
         <section class="body">
     <div id="container">
@@ -121,11 +109,9 @@
 
 
 	
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script src="./static/js/main.js"></script>
 	
-	
-	
+		 <footer class="footer">
+			<div class="container">
                 <section class="btm">
                     <div class="row">
                         <div class="span6">
@@ -144,8 +130,9 @@
         </footer>
 		
 <a href="https://github.com/GeoNode/geonode/tree/dev"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+	
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script src="./static/js/main.js"></script>
+	
     </body>
-</html>
-
-</body>
 </html>
