--- a/admin_features.html
+++ b/admin_features.html
@@ -63,25 +63,25 @@
                 <div class="row">
                     <div class="span10">
                         <nav class="subnav">
-                            <h5>Features:</h5>
+                            <h5>Administrator Features:</h5>
                             <ul class="unstyled">
-                                <li><a href="#postgis">Post<strong>GIS</strong></a></li>
-                                <li><a href="#geoserver">Geo<strong>Server</strong></a></li>
-                                <li><a href="#webcache">Geo<strong>WebCache</strong></a></li>
-                                <li><a href="#openlayers">Open<strong>Layers</strong></a></li>
-                                <li><a href="#geoext">Geo<strong>Ext</strong></a></li>
+                                <li><a href="#ogcsdi">Spatial Data Infrastructure</strong></a></li>
+                                <li><a href="#metadata"><strong>Metadata</strong></a></li>
+                                <li><a href="#security"><strong>Security</strong></a></li>
+                                <li><a href="#scale"><strong>Scaleablity</strong></a></li>
+                                <li><a href="#adminconsole"><strong>Admin Console</strong></a></li>
                             </ul>
                         </nav>
                     </div>
                     <div class="span2">
                         <div class="pull-right link-extra">
-                            <a href="#">Try our <strong>Workshop</strong></a>
+                            <a href="http://docs.geonode.org/en/latest/#for-administrators" target="_blank">Follow our Administrators <strong>Workshop</strong></a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="feature-details" id="postgis">
+        <section class="feature-details" id="ogcsdi">
             <div class="container">
                 <div class="row">
                     <div class="span5">
@@ -89,34 +89,32 @@
                     </div>
                     <div class="span7 number one">
                         <div class="highlighted-box">
-                            <h2>Post<strong>GIS</strong></h2>
-                            <h4>A robust spatial database system.</h4>
+                            <h2>OGC Compliant SDI</strong></h2>
+                            <h4>Essential components for deploying OGC SDI</h4>
                             <ul class="unstyled">
-                                <li>Spatial database overview</li>
-                                <li>Create a spatial database</li>
-                                <li>Load shapefiles into database tables</li>
-                                <li>Introduce some basic functions and operations</li>
+                                <li>WMS/WFS/WCS</li>
+                                <li>CSW</li>
                             </ul>
-                            <a href="feature_detail.html" class="btn btn-success">Learn about PostGIS</a>
+                            <a href="ogc_sdi.html" class="btn btn-success">Learn about GeoNode for SDI</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="feature-details feature2" id="geoserver">
+        <section class="feature-details feature2" id="metadata">
             <div class="container">
                 <div class="row">
                     <div class="span7 number two">
                         <div class="highlighted-box">
-                            <h2>Geo<strong>Server</strong></h2>
-                            <h4>A robust spatial database system.</h4>
+                            <h2>Metadata</strong></h2>
+                            <h4>Metadata Catalog, Authoring and Management</h4>
                             <ul class="unstyled">
-                                <li>Spatial database overview</li>
-                                <li>Create a spatial database</li>
-                                <li>Load shapefiles into database tables</li>
-                                <li>Introduce some basic functions and operations</li>
+                                <li>CSW</li>
+                                <li>Search</li>
+                                <li>Format Support</li>
+                                <li>Versioning</li>
                             </ul>
-                            <a href="#" class="btn btn-success">Learn about GeoServer</a>
+                            <a href="catalog_metadata.html" class="btn btn-success">Learn about GeoNode's Metadata Capabilities</a>
                         </div>
                     </div>
                     <div class="span5">
@@ -125,7 +123,7 @@
                 </div>
             </div>
         </section>
-        <section class="feature-details feature3" id="webcache">
+        <section class="feature-details feature3" id="security">
             <div class="container">
                 <div class="row">
                     <div class="span5">
@@ -133,15 +131,50 @@
                     </div>
                     <div class="span7 number three">
                         <div class="highlighted-box">
-                            <h2>Geo<strong>WebCache</strong></h2>
-                            <h4>A robust spatial database system.</h4>
+                            <h2>Security</strong></h2>
+                            <h4>Security Framework.</h4>
                             <ul class="unstyled">
-                                <li>Spatial database overview</li>
-                                <li>Create a spatial database</li>
-                                <li>Load shapefiles into database tables</li>
-                                <li>Introduce some basic functions and operations</li>
+                                <li>Permissions</li>
                             </ul>
-                            <a href="#" class="btn btn-success">Learn about GeoWebCache</a>
+                            <a href="security.html" class="btn btn-success">Learn about GeoNode's Security Framework</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="feature-details feature2" id="scale">
+            <div class="container">
+                <div class="row">
+                    <div class="span7 number two">
+                        <div class="highlighted-box">
+                            <h2>Scalability</strong></h2>
+                            <h4>Scalability, reliability</h4>
+                            <ul class="unstyled">
+                            </ul>
+                            <a href="scale.html" class="btn btn-success">Learn about Deploying and Scaling GeoNode</a>
+                        </div>
+                    </div>
+                    <div class="span5">
+                        <img src="static/img/globe.png" width="347" height="469" alt="Globe" class="feature-img" />
+                    </div>
+                </div>
+            </div>
+        </section>
+      <section class="feature-details feature3" id="adminconsole">
+            <div class="container">
+                <div class="row">
+                    <div class="span5">
+                        <img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" />
+                    </div>
+                    <div class="span7 number three">
+                        <div class="highlighted-box">
+                            <h2>Administration Console</strong></h2>
+                            <h4>Django Administrator Console</h4>
+                            <ul class="unstyled">
+                                <li>Metadata Editing</li>
+                                <li>Bulk Operations</li>
+                            </ul>
+                            <a href="admin_console.html" class="btn btn-success">Learn about GeoNode's Admin Console</a>
                         </div>
                     </div>
                 </div>
