--- a/bootstrap_jquery.html
+++ b/bootstrap_jquery.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="span6">
                         <div>
-                            <a href="https://github.com/GeoNode/geonode/blob/dev/README" class="btn btn-success">Install GeoNode Now</a>
+                            <a href="install.html" class="btn btn-success">Install GeoNode Now</a>
                             <a target="_blank" href="http://ui.dev.geonode.org/" class="btn btn-warning">Try the Demo</a>
                         </div>
                     </div>
